added threejs to index.jade

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -4,5 +4,7 @@ block content
     .inner
       a(href='enter') Enter
       a(href='login') Login
-  block js
-    script(src='components/angular/angular.min.js')
+      .three#THREE 
+  script(src='//cdnjs.cloudflare.com/ajax/libs/three.js/r72/three.min.js')
+  script(src='components/angular/angular.min.js')
+  script(src='js/th/config.b.js')
