added window resize handle

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -8,3 +8,6 @@ block content
   script(src='//cdnjs.cloudflare.com/ajax/libs/three.js/r72/three.min.js')
   script(src='components/angular/angular.min.js')
   script(src='js/th/config.b.js')
+  script(src='js/th/Scene.js')
+  script(src='js/th/th.main.js')
+  
