changed three animation

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -4,8 +4,7 @@ block css
 block content
   .pageOne
     .inner
-      a(href='enter') Enter
-      break
+      a(href='enter' style='margin: 15px') Enter
       a(href='login') Login
     .three#THREE 
   script(src='//cdnjs.cloudflare.com/ajax/libs/three.js/r72/three.min.js')
