setup local auth

--- a/app/views/user.jade
+++ b/app/views/user.jade
@@ -1,9 +1,8 @@
 extends layout
 block content
   .page
-    .block
-      img(id='profpic')
-      div#userinfo
-        #{userinfo} #{userinfo.username} #{userinfo.email}
-    .block 
+      img(id='profpic') 
+      .user User 
+      
+     
   block js
